--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,13 @@
             "email": "dmitrii.arnaut@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+          "Framework\\": "framework/",
+          "App\\": "app/",
+          "Api\\": "api/"
+        }
+    },
     "require": {
         "illuminate/events": "^7.14"
     }
