--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require": {
         "illuminate/database": "^5.1",
+        "illuminate/session": "^5.1",
         "robmorgan/phinx": "^0.4.4"
     }
 }
