--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "illuminate/database": "^5.1",
         "illuminate/session": "^5.1",
-        "robmorgan/phinx": "^0.4.4"
+        "robmorgan/phinx": "^0.4.4",
+        "firebase/php-jwt": "^5.2"
     }
 }
