--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "illuminate/database": "^5.1",
         "illuminate/session": "^5.1",
         "robmorgan/phinx": "^0.4.4",
-        "firebase/php-jwt": "^5.2"
+        "firebase/php-jwt": "^5.2",
+        "rakit/validation": "^1.2"
     }
 }
