--- a/phinx.yml
+++ b/phinx.yml
@@ -18,7 +18,7 @@ environments:
         host: localhost
         name: avtosklad
         user: root
-        pass: 'none'
+        pass: 'rootnone'
         port: 3306
         charset: utf8
 
