--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "illuminate/session": "^5.1",
         "robmorgan/phinx": "^0.4.4",
         "firebase/php-jwt": "^5.2",
-        "rakit/validation": "^1.2"
+        "rakit/validation": "^1.2",
+        "curl/curl": "^2.3"
     }
 }
